--- a/client/src/sass/components/_followuser.scss
+++ b/client/src/sass/components/_followuser.scss
@@ -34,6 +34,13 @@
                 .verfied-icon{
                     margin-left: 0.4rem;
                 }
+                .warp-user-fullname{
+                    @include flexCenter;
+                    img{
+                        height: 20px;
+                        width: 20px;
+                    }
+                }
             }
 
             .user-username {
